iframe-frontend/src/components/CollaborationLogos/styles.module.css
.logos_container {
    --logo-size: 80px;
    display: flex;
    gap: 8px;
    align-items: start;
}

.logo_container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
    width: 120px;
}

.logo_wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    width: var(--logo-size);
    height: var(--logo-size);
    border-radius: var(--logo-radius, 50%);
    border-style: solid;
    box-sizing: border-box;
}

.retailer_logo_wrapper {
    background: var(--retailer-logo-bg, white);
    border-width: var(--retailer-logo-border-w, 0);
    border-color: var(--retailer-logo-border-c, transparent);
}

.platform_logo_wrapper {
    background: var(--platform-logo-bg, white);
    border-width: var(--platform-logo-border-w, 0);
    border-color: var(--platform-logo-border-c, transparent);
}

.logo_wrapper_initials {
    background: var(--logo-wrapper-initials-bg, #BCBDC1);
}

.logo {
    border-radius: var(--logo-radius, 50%);
    width: var(--logo-size);
    height: var(--logo-size);
}

.logo_initials{    
    width: calc(var(--logo-size) - 4px);
    height: calc(var(--logo-size) - 4px);
    border-radius: var(--logo-radius, 50%);
    color: var(--logo-initials-f-c, #000);          
    font-size: var(--logo-initials-f-s, 60px);    
    font-weight: var(--logo-initials-f-w, 600);   
    background: var(--logo-initials-bg, #FFF);
    font-feature-settings: 'liga' off, 'clig' off;
    font-style: normal;
    text-transform: uppercase;
    text-align: center;  
    display: flex;
    justify-content: center;
    align-items: center;
    aspect-ratio: 1/1;    
}

.logo_initials_two_letters {
    font-size: var(--logo-initials-two-letters-f-s, 40px);
}

.plus_logo {
    --plus-height: 16px;
    height: var(--plus-height);
    margin-top: calc(calc(var(--logo-size) / 2) - calc(var(--plus-height) / 2));
}

.logo_text {
    font-size: var(--logo-txt-f-s, 14px);
    font-weight: var(--logo-txt-f-w, 500);
    line-height: 22px;
    text-wrap: nowrap;
    color: var(--logo-txt-f-c, var(--details-subtitle-f-c));
}

